# tarantino

./: .flake8  LICENSE  Pipfile  README.md  format.sh  pyproject.toml  setup.cfg
examples/basic-app/: 404.html  casts.py  index.py  login.py  salutation.py
examples/basic-app/blog/: index.html  index.py
examples/basic-app/blog/programming/: index.html  index.py
examples/basic-app/blog/technology/: index.html  index.py
examples/basic-app/chat/: index.py
examples/multiplayer-game/: game.py  index.html  index.py
tarantino/: __init__.py  _types.py  application.py  authentication.py  casts.py  concurrency.py  endpoint.py  imports.py  router.py  types.py
tarantino/http/: __init__.py  cookie.py  handlers.py  headers.py  request.py  response.py  utils.py
tarantino/middleware/: __init__.py  cors.py  error_response.py
tarantino/websocket/: __init__.py  connection.py  handlers.py  utils.py
tests/: test_headers.py  test_router.py
