[metadata]
name = tarantino
version = attr: tarantino.__version__
description = An ASGI web framework (from scratch) for learning
long_description = file: README.md
keywords = web, framework, asgi
license_files = LICENSE
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Software Development
    Typing :: Typed
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: AsyncIO
    Framework :: Tarantino
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP

[options]
packages =
    tarantino
    tarantino.http
    tarantino.websocket
include_package_data = True

[options.package_data]
tarantino = py.typed

[options.extras_require]
dev = 
    flake8
    autoflake
    isort
    black
    mypy
    pytest
test = uvicorn[standard]
